[Java] Add `-XX:+UseBiasedLocking` to force biased locking on Java 15.